# tinyrpc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
example/: CMakeLists.txt
example/Arithmetic/: ArithmeticClient.cc  ArithmeticClientStub.h  ArithmeticService.cc  ArithmeticServiceStub.h  CMakeLists.txt
tests/: CMakeLists.txt  main.cc  test_tinyrpc.cc
tinyrpc/: CMakeLists.txt  util.h
tinyrpc/client/: BaseClient.cc  BaseClient.h
tinyrpc/server/: BaseServer.cc  BaseServer.h  Procedure.h  RpcServer.cc  RpcServer.h  RpcService.h
tinyrpc/stubgenerator/: CMakeLists.txt  ClientStubGenerator.cc  ClientStubGenerator.h  ServiceStubGenerator.cc  ServiceStubGenerator.h  StubGenerator.cc  StubGenerator.h  main.cc
