add_executable(arithmetic_server ArithmeticService.cc ArithmeticServiceStub.h)
target_link_libraries(arithmetic_server tinyrpc tinynet_net tinynet_base)

add_executable(arithmetic_client ArithmeticClient.cc ArithmeticClientStub.h)
target_link_libraries(arithmetic_client tinyrpc tinynet_net tinynet_base)
